test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/multi_storage_class_fun.plx
# A function declaration can't have multiple storage class keywords
extrn pub fn foo(none) i32 {
    return 0
}

pub fn main(none) i32 {
    return foo()
}
